--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install black flake8 mypy pytest openapi-spec-validator requests_mock -r requirements.txt
+          pip install -e .
       - name: Format
         run: black --check .
       - name: Lint
