feat: add stock data commands

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tv-generator"
-version = "0.6.0"
+version = "0.7.0"
+
+[project.dependencies]
+click = "*"
+requests = "*"
+pandas = "*"
+PyYAML = "*"
+tqdm = "*"
+openapi-spec-validator = "*"
 
 [project.scripts]
 tvgen = "src.cli:cli"
