--- a/.github/workflows/spec-update.yml
+++ b/.github/workflows/spec-update.yml
@@ -55,6 +55,7 @@ jobs:
           branch: 'auto/spec-update'
       - name: Notify on failure
         if: failure()
-        uses: actions/notify-slack@v2
+        uses: Ilshidur/action-slack@v2.0.0
         with:
-          slack-webhook: ${{ secrets.SLACK_WEBHOOK }}
+          webhook_url: ${{ secrets.SLACK_WEBHOOK }}
+          msg: 'Workflow failed: ${{ github.workflow }} in ${{ github.repository }}'
