--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black flake8 mypy pytest openapi-spec-validator requests_mock -r requirements.txt
+          pip install black flake8 mypy pytest openapi-spec-validator requests_mock \
+            types-requests types-PyYAML types-toml -r requirements.txt
           pip install -e .
       - name: Format
         run: black --check .
