--- a/.github/workflows/spec-update.yml
+++ b/.github/workflows/spec-update.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install requests_mock yamllint
+          pip install requests_mock yamllint \
+            types-requests types-PyYAML types-toml
           pip install -e .
       - name: Generate specs for all markets
         run: |
