--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Test
         run: pytest -q
       - name: Generate spec
-        run: tvgen generate --market crypto --output specs/openapi_crypto.yaml
+        run: |
+          mkdir -p results/crypto
+          echo -e "field\tstatus\tvalue\nclose\tok\t1\nopen\tok\tabc" > results/crypto/field_status.tsv
+          tvgen generate --market crypto --output specs/openapi_crypto.yaml
       - name: Validate OpenAPI
         run: openapi-spec-validator specs/openapi_crypto.yaml
