--- a/.github/workflows/spec-update.yml
+++ b/.github/workflows/spec-update.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install requests_mock yamllint \
+          pip install requests_mock yamllint openapi-spec-validator \
             types-requests types-PyYAML types-toml
           pip install -e .
       - name: Prepare field status files
@@ -49,14 +49,20 @@ jobs:
             yamllint "$spec"
             openapi-spec-validator "$spec"
           done
-      - name: Fetch and rebase before PR
+      - name: Fetch and rebase before commit
         run: |
           git fetch origin main
           git rebase origin/main
+
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: specs/openapi_*.yaml
+          message: 'chore: update generated specifications'
+          default_author: github_actions
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
-          add-paths: 'specs/openapi_*.yaml'
           commit-message: 'chore: update generated specifications'
           title: 'Update OpenAPI specifications'
           body: 'Automated update of generated specifications.'
