--- a/.github/workflows/spec-update.yml
+++ b/.github/workflows/spec-update.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     permissions:
       contents: write
+      pull-requests: write
     runs-on: ubuntu-latest
     strategy:
       matrix:
