--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-requests
-pandas
-PyYAML
-openapi-spec-validator
+requests>=2.32
+pandas>=2.3
+PyYAML>=6.0
+openapi-spec-validator>=0.7
 requests_mock
-click
-toml
-requests_cache
+click>=8.2
+toml>=0.10
+requests_cache>=1.2
 types-requests
 types-PyYAML
 types-toml
