--- a/.github/workflows/spec-update.yml
+++ b/.github/workflows/spec-update.yml
@@ -68,14 +68,14 @@ jobs:
           add: specs/openapi_*.yaml
           message: 'chore: update generated specifications'
           default_author: github_actions
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v7
-        with:
-          commit-message: 'chore: update generated specifications'
-          title: 'Update OpenAPI specifications'
-          body: 'Automated update of generated specifications.'
-          branch: 'OpenAPI'
-          token: ${{ secrets.GITHUB_TOKEN }}
+- name: Create Pull Request
+  uses: peter-evans/create-pull-request@v7
+  with:
+    commit-message: 'chore: update generated specifications'
+    title: 'Update OpenAPI specifications'
+    body: 'Automated update of generated specifications.'
+    branch: 'OpenAPI'
+    token: ${{ secrets.PAT_TOKEN }}
         # - name: Notify on failure
         #   if: failure()
         #   uses: Ilshidur/action-slack@2.1.0
