--- a/.github/workflows/spec-update.yml
+++ b/.github/workflows/spec-update.yml
@@ -76,7 +76,7 @@ jobs:
           title: 'Update OpenAPI specifications'
           body: 'Automated update of generated specifications.'
           branch: 'OpenAPI'
-          token: ${{ secrets.PAT_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           # - name: Notify on failure
           #   if: failure()
           #   uses: Ilshidur/action-slack@2.1.0
