--- a/.github/workflows/spec-update.yml
+++ b/.github/workflows/spec-update.yml
@@ -62,6 +62,11 @@ jobs:
         run: |
           git stash pop || echo "No stashed changes to apply"
 
+      - name: Pull latest changes from remote
+        run: |
+          git fetch origin main
+          git merge origin/main
+
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
