--- a/specs/crypto.yaml
+++ b/specs/crypto.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 x-oai-custom-action-schema-version: v1
 info:
   title: Unofficial TradingView Crypto API
-  version: 1.0.7
+  version: 1.0.8
 servers:
   - url: https://scanner.tradingview.com
 paths:
@@ -129,6 +129,12 @@ components:
     Array:
       type: array
       items: {}
+    NumericFieldNoTimeframe:
+      type: string
+      enum: []
+    NumericFieldWithTimeframe:
+      type: string
+      pattern: ^[A-Z0-9_+\[\]]+\|(1|5|15|30|60|120|240|1D|1W)$
     CryptoFields:
       type: object
       properties:
