--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black flake8 mypy pytest openapi-spec-validator requests_mock \
+          pip install black flake8 mypy pytest pytest-cov openapi-spec-validator requests_mock \
             types-requests types-PyYAML types-toml -r requirements.txt
           pip install -e .
       - name: Format
@@ -32,8 +32,15 @@ jobs:
         run: flake8 .
       - name: Type check
         run: mypy --strict src/
-      - name: Test
-        run: pytest -q
+      - name: Test with coverage
+        run: pytest --cov=src --cov-report=xml --cov-fail-under=95 -q
+      - name: Upload coverage to Codecov
+        if: ${{ env.CODECOV_TOKEN != '' }}
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        run: |
+          pip install codecov
+          codecov -t $CODECOV_TOKEN
       - name: Generate specs for all markets
         run: |
           for market in crypto forex stocks futures; do
