--- a/.github/workflows/spec-update.yml
+++ b/.github/workflows/spec-update.yml
@@ -35,10 +35,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install requests_mock yamllint openapi-spec-validator \
+          pip install poetry
+          poetry install --no-interaction --no-root
+          poetry run pip install requests_mock yamllint openapi-spec-validator \
             types-requests types-PyYAML types-toml
-          pip install -e .
+      - name: Debug tvgen installation
+        run: |
+          poetry run tvgen --help || echo "tvgen is not installed or not in PATH"
       - name: Export server URL
         if: env.SERVER_URL != ''
         run: echo "SERVER_URL=${SERVER_URL}" >> "$GITHUB_ENV"
