--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,13 +41,13 @@ jobs:
         run: |
           pip install codecov
           codecov -t $CODECOV_TOKEN
-      - name: Generate specs for all markets
-        run: |
-          for market in crypto forex stocks futures; do
-            mkdir -p results/$market
-            echo -e "field\tstatus\tvalue\nclose\tok\t1\nopen\tok\tabc" > results/$market/field_status.tsv
-            tvgen generate --market $market --output specs/openapi_${market}.yaml
-          done
+       - name: Generate specs for all markets
+         run: |
+           for market in crypto forex stocks futures; do
+             mkdir -p results/$market
+             echo -e "field\tstatus\tvalue\nclose\tok\t1\nopen\tok\tabc" > results/$market/field_status.tsv
+             tvgen generate --market $market --outdir specs/openapi_${market}.yaml
+           done
 
       - name: Validate all generated specs
         run: |
