--- a/specs/futures.yaml
+++ b/specs/futures.yaml
@@ -1,108 +1,108 @@
 openapi: 3.1.0
 x-oai-custom-action-schema-version: v1
 info:
-  title: Unofficial TradingView Crypto API
+  title: Unofficial TradingView Futures API
   version: 1.0.30
 servers:
   - url: https://scanner.tradingview.com
 paths:
-  /crypto/scan:
+  /futures/scan:
     post:
-      summary: Scan crypto market data
-      description: 'Send a CryptoScanRequest payload and receive a CryptoScanResponse.
-        The response contains fields defined in #/components/schemas/CryptoFields.'
-      operationId: CryptoScan
+      summary: Scan futures market data
+      description: 'Send a FuturesScanRequest payload and receive a FuturesScanResponse.
+        The response contains fields defined in #/components/schemas/FuturesFields.'
+      operationId: FuturesScan
       x-openai-isConsequential: false
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CryptoScanRequest'
+              $ref: '#/components/schemas/FuturesScanRequest'
       responses:
         '200':
           description: Successful response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CryptoScanResponse'
+                $ref: '#/components/schemas/FuturesScanResponse'
         '400':
           description: Bad Request
         '500':
           description: Server Error
-  /crypto/search:
+  /futures/search:
     post:
-      summary: Search crypto market data
-      description: 'Send a CryptoSearchRequest payload and receive a CryptoSearchResponse.
-        The response contains fields defined in #/components/schemas/CryptoFields.'
-      operationId: CryptoSearch
+      summary: Search futures market data
+      description: 'Send a FuturesSearchRequest payload and receive a FuturesSearchResponse.
+        The response contains fields defined in #/components/schemas/FuturesFields.'
+      operationId: FuturesSearch
       x-openai-isConsequential: false
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CryptoSearchRequest'
+              $ref: '#/components/schemas/FuturesSearchRequest'
       responses:
         '200':
           description: Successful response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CryptoSearchResponse'
+                $ref: '#/components/schemas/FuturesSearchResponse'
         '400':
           description: Bad Request
         '500':
           description: Server Error
-  /crypto/history:
+  /futures/history:
     post:
-      summary: History crypto market data
-      description: 'Send a CryptoHistoryRequest payload and receive a CryptoHistoryResponse.
-        The response contains fields defined in #/components/schemas/CryptoFields.'
-      operationId: CryptoHistory
+      summary: History futures market data
+      description: 'Send a FuturesHistoryRequest payload and receive a FuturesHistoryResponse.
+        The response contains fields defined in #/components/schemas/FuturesFields.'
+      operationId: FuturesHistory
       x-openai-isConsequential: false
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CryptoHistoryRequest'
+              $ref: '#/components/schemas/FuturesHistoryRequest'
       responses:
         '200':
           description: Successful response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CryptoHistoryResponse'
+                $ref: '#/components/schemas/FuturesHistoryResponse'
         '400':
           description: Bad Request
         '500':
           description: Server Error
-  /crypto/summary:
+  /futures/summary:
     post:
-      summary: Summary crypto market data
-      description: 'Send a CryptoSummaryRequest payload and receive a CryptoSummaryResponse.
-        The response contains fields defined in #/components/schemas/CryptoFields.'
-      operationId: CryptoSummary
+      summary: Summary futures market data
+      description: 'Send a FuturesSummaryRequest payload and receive a FuturesSummaryResponse.
+        The response contains fields defined in #/components/schemas/FuturesFields.'
+      operationId: FuturesSummary
       x-openai-isConsequential: false
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CryptoSummaryRequest'
+              $ref: '#/components/schemas/FuturesSummaryRequest'
       responses:
         '200':
           description: Successful response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CryptoSummaryResponse'
+                $ref: '#/components/schemas/FuturesSummaryResponse'
         '400':
           description: Bad Request
         '500':
           description: Server Error
-  /crypto/metainfo:
+  /futures/metainfo:
     post:
-      summary: Get crypto metainfo
-      description: Returns the list of available fields for crypto.
-      operationId: CryptoMetainfo
+      summary: Get futures metainfo
+      description: Returns the list of available fields for futures.
+      operationId: FuturesMetainfo
       x-openai-isConsequential: false
       responses:
         '200':
@@ -110,7 +110,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CryptoMetainfoResponse'
+                $ref: '#/components/schemas/FuturesMetainfoResponse'
         '400':
           description: Bad Request
         '500':
@@ -135,16 +135,13 @@ components:
     NumericFieldWithTimeframe:
       type: string
       pattern: ^[A-Z0-9_+\[\]]+\|(1|5|15|30|60|120|240|1D|1W)$
-    CryptoFields:
+    FuturesFields:
       type: object
       properties:
         close:
           $ref: '#/components/schemas/Num'
           description: Close
-        open:
-          $ref: '#/components/schemas/Str'
-          description: Open
-    CryptoScanRequest:
+    FuturesScanRequest:
       type: object
       properties:
         symbols:
@@ -176,26 +173,26 @@ components:
       required:
         - symbols
         - columns
-    CryptoScanResponse:
+    FuturesScanResponse:
       type: object
       properties:
         data:
           type: array
           items:
-            $ref: '#/components/schemas/CryptoFields'
-    CryptoSearchRequest:
+            $ref: '#/components/schemas/FuturesFields'
+    FuturesSearchRequest:
       type: object
-    CryptoHistoryRequest:
+    FuturesHistoryRequest:
       type: object
-    CryptoSummaryRequest:
+    FuturesSummaryRequest:
       type: object
-    CryptoSearchResponse:
+    FuturesSearchResponse:
       type: object
-    CryptoHistoryResponse:
+    FuturesHistoryResponse:
       type: object
-    CryptoSummaryResponse:
+    FuturesSummaryResponse:
       type: object
-    CryptoMetainfoResponse:
+    FuturesMetainfoResponse:
       type: object
       properties:
         fields:
